<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.balog.rssi_location.HomeActivity"
    android:orientation="vertical">

<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/formal_app_name"
        android:textSize="24sp" />

    <Button android:id="@+id/beacon_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/beacon_list"
        android:textColor="@android:color/white"
        android:background="@drawable/custom_button"/>

    <Button
        android:id="@+id/map_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="@string/map_button"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/info_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="@string/info"
        android:textColor="@android:color/white" />

        <Button android:id="@+id/single_measure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/measure_button"
        android:textColor="@android:color/white"
        android:background="@drawable/custom_button"/>

    <TableLayout android:id="@+id/table_distance"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

    </TableLayout>

</LinearLayout>
